welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean) : nbPas = {
  if (versLAvant==true) {
    for (i<- 1 to nbPas ) {
      avance
    }
  } else {
    recule
  } 
}